--- a/helloWorld/.vscode/launch.json
+++ b/helloWorld/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Local x86",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/x86_64/debug/cppQML",
+            "program": "${workspaceFolder}/x86_64/debug/helloWorld",
             "args": [
                 "-qmljsdebugger=port:${config:torizon_debug_port3},block,services:DebugMessages,QmlDebugger,V8Debugger,QmlInspector,DebugTranslation"
             ],
@@ -31,13 +31,13 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "build-debug-x86"
+            "preLaunchTask": "build-debug-x86-local"
         },
         {
             "name": "Torizon x86",
             "type": "cppdbg",
             "request": "launch",
-            "program": "~/app/cppQML",
+            "program": "~/app/helloWorld",
             "args": [
                 //"-qmljsdebugger=port:${config:torizon_debug_port3},host:0.0.0.0,block,services:DebugMessages,QmlDebugger,V8Debugger,QmlInspector,DebugTranslation"
             ],
@@ -89,7 +89,7 @@
             "name": "Torizon ARMv8",
             "type": "cppdbg",
             "request": "launch",
-            "program": "~/app/cppQML",
+            "program": "~/app/helloWorld",
             "args": [
                 //"-qmljsdebugger=port:${config:torizon_debug_port3},host:0.0.0.0,block,services:DebugMessages,QmlDebugger,V8Debugger,QmlInspector,DebugTranslation"
             ],
@@ -136,6 +136,58 @@
                 }
             ],
             "preLaunchTask": "deploy-torizon-arm64"
+        },
+        {
+            "name": "Torizon ARMv7",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "~/app/helloWorld",
+            "args": [
+                //"-qmljsdebugger=port:${config:torizon_debug_port3},host:0.0.0.0,block,services:DebugMessages,QmlDebugger,V8Debugger,QmlInspector,DebugTranslation"
+            ],
+            "stopAtEntry": false,
+            "cwd": "~/app",
+            "environment": [
+                {
+                    "name": "QT_LOGGING_RULES",
+                    "value": "*.debug=true; qt.*.debug=false"
+                }
+            ],
+            "externalConsole": false,
+            "sourceFileMap": {
+                "/app/aarch64": "${workspaceFolder}/aarch64"
+            },
+            "pipeTransport": {
+                "debuggerPath": "/usr/bin/gdb",
+                "pipeProgram": "ssh",
+                "pipeArgs": [
+                    "-T",
+                    "-q",
+                    "-p",
+                    "${config:torizon_debug_ssh_port}",
+                    "-i",
+                    "${workspaceFolder}/.conf/id_rsa", // ssh key path
+                    "-o",
+                    "StrictHostKeyChecking=no",
+                    "-o",
+                    "UserKnownHostsFile /dev/null",
+                    "torizon@${config:torizon_ip}" // user@device
+                ]
+            },
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description":  "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "deploy-torizon-arm"
         }
     ]
 }
