--- a/helloWorld/Dockerfile.sdk
+++ b/helloWorld/Dockerfile.sdk
@@ -8,6 +8,7 @@ ARG BASE_VERSION=2.5-bullseye
 ARG IMAGE_ARCH=
 
 # TODO: cross compile x86 to arm
+# Qt 6 cross toolchain
 # We will use emulation here
 # BUILD ------------------------------------------------------------------------
 FROM --platform=linux/${IMAGE_ARCH} \
@@ -17,6 +18,10 @@ ARG IMAGE_ARCH
 
 # add the backports to get Qt6 packages
 RUN echo "deb http://deb.debian.org/debian bullseye-backports main" >> \
+    /etc/apt/sources.list
+
+# TODO: use this still we have a new libdrm from feeds
+RUN sed -i '/deb https:\/\/feeds.toradex.com*/d' \
     /etc/apt/sources.list
 
 # __deps__
