--- a/helloWorld/.vscode/settings.json
+++ b/helloWorld/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "torizon_psswd": "1234",
   "torizon_login": "torizon",
-  "torizon_ip": "apalis-imx8-06804474.local",
+  "torizon_ip": "raspberrypi4-64-100000008c7e0024.local",
   "host_ip": "192.168.15.98",
   "torizon_workspace": "${workspaceFolder}",
   "torizon_debug_port": "",
